set(ast_SOURCES
  Assign.cpp
  BinaryOperator.cpp
  Block.cpp
  Call.cpp
  Cond.cpp
  Declaration.cpp
  Filter.cpp
  FunctionValue.cpp
  ListValue.cpp
  Loop.cpp
  Map.cpp
  Node.cpp
  NumberValue.cpp
  Print.cpp
  Return.cpp
  Scope.cpp
  Tuple.cpp
  UnaryOperator.cpp
  Value.cpp
  Variable.cpp
  Void.cpp
  )

set(ast_HEADERS
  Assign.hpp
  BinaryOperator.hpp
  Block.hpp
  Call.hpp
  Cond.hpp
  Declaration.hpp
  Filter.hpp
  FunctionValue.hpp
  ListValue.hpp
  Literal.hpp
  Loop.hpp
  Map.hpp
  Node.hpp
  NumberValue.hpp
  Print.hpp
  Return.hpp
  Scope.hpp
  Tuple.hpp
  UnaryOperator.hpp
  Value.hpp
  Variable.hpp
  Void.hpp
  BadResultCast.hpp
  )

add_library(ast STATIC ${ast_SOURCES})
